--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Daedalus - redirecting...</title>
-    <meta http-equiv="refresh" content="1; url=../" />
+    <meta http-equiv="refresh" content="1; url=shop/" />
   </head>
 
   <body>
