--- a/web/shop/products/index.html
+++ b/web/shop/products/index.html
@@ -9,26 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
 
-    <base href="../../shop/" />
+    <base href="../" />
 
     <script src="./jquery-1.js"></script>
     <script>
       hsjQuery = window["jQuery"];
     </script>
-    <link href="./public_common.css" rel="stylesheet" />
-    <link rel="canonical" href="./" />
+    <link href="public_common.css" rel="stylesheet" />
+    <link rel="canonical" href="" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./proximanova.css" />
+    <link rel="stylesheet" type="text/css" href="proximanova.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="content-language" content="en-us" />
 
     <title>Berkshire &amp; Nash</title>
-    <script src="./daf69945af.js"></script>
-    <link href="./daf69945af.css" media="all" rel="stylesheet" />
-    <link rel="stylesheet" href="./bootstrap.css" crossorigin="anonymous" />
-    <link href="./css.css" rel="stylesheet" />
-    <link href="./index.css" rel="stylesheet" />
+    <script src="daf69945af.js"></script>
+    <link href="daf69945af.css" media="all" rel="stylesheet" />
+    <link rel="stylesheet" href="bootstrap.css" crossorigin="anonymous" />
+    <link href="css.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -38,16 +38,16 @@
           <div class="col-12 col-md-4 col-lg-3 outer-nav first-outer-nav">
             <ul>
               <li>
-                <a href="./404">Account</a>
+                <a href="404/">Account</a>
               </li>
               <li>
-                <a href="./404">Wishlist</a>
+                <a href="404/">Wishlist</a>
               </li>
               <li>
-                <a href="./404">Log In</a>
+                <a href="404/">Log In</a>
               </li>
               <li class="mobile-bag">
-                <a href="./cart"
+                <a href="cart/"
                   ><i
                     class="fa fa-shopping-bag"
                     aria-hidden="true"
@@ -60,7 +60,7 @@
           </div>
 
           <div class="col-12 col-md-5 col-lg-6 logo">
-            <a href="./" style="text-decoration:none;color:#000000;"
+            <a href="." style="text-decoration:none;color:#000000;"
               >Berkshire &amp; Nash</a
             >
           </div>
@@ -68,7 +68,7 @@
           <div class="col-2 col-md-3 col-lg-3 outer-nav second-outer-nav">
             <ul>
               <li>
-                <a href="./cart"
+                <a href="cart/"
                   ><i
                     class="fa fa-shopping-bag"
                     aria-hidden="true"
@@ -87,140 +87,140 @@
       <div class="main-nav" id="mainnav">
         <ul class="in">
           <li>
-            <a href="./products"
+            <a href="products/"
               >Dresses <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Floral</a>
+                <a href="products/">Floral</a>
               </li>
               <li>
-                <a href="./products">Midi</a>
+                <a href="products/">Midi</a>
               </li>
               <li>
-                <a href="./products">Maxi</a>
+                <a href="products/">Maxi</a>
               </li>
               <li>
-                <a href="./products">Bodycon</a>
+                <a href="products/">Bodycon</a>
               </li>
               <li>
-                <a href="./products">Formal</a>
+                <a href="products/">Formal</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Tops <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Blouses</a>
+                <a href="products/">Blouses</a>
               </li>
               <li>
-                <a href="./products">Tees</a>
+                <a href="products/">Tees</a>
               </li>
               <li>
-                <a href="./products">Tanks</a>
+                <a href="products/">Tanks</a>
               </li>
               <li>
-                <a href="./products">Sweaters</a>
+                <a href="products/">Sweaters</a>
               </li>
               <li>
-                <a href="./products">Hoodies</a>
+                <a href="products/">Hoodies</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./404"
+            <a href="404/"
               >Bottoms <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Jeans</a>
+                <a href="products/">Jeans</a>
               </li>
               <li>
-                <a href="./products">Trousers</a>
+                <a href="products/">Trousers</a>
               </li>
               <li>
-                <a href="./products">Skirts</a>
+                <a href="products/">Skirts</a>
               </li>
               <li>
-                <a href="./products">Shorts</a>
+                <a href="products/">Shorts</a>
               </li>
               <li>
-                <a href="./products">Leggings</a>
+                <a href="products/">Leggings</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Outerwear <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Jackets</a>
+                <a href="products/">Jackets</a>
               </li>
               <li>
-                <a href="./products">Parkas</a>
+                <a href="products/">Parkas</a>
               </li>
               <li>
-                <a href="./products">Trenches</a>
+                <a href="products/">Trenches</a>
               </li>
               <li>
-                <a href="./products">Denim</a>
+                <a href="products/">Denim</a>
               </li>
               <li>
-                <a href="./products">Blazers</a>
+                <a href="products/">Blazers</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Accessories <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Scarves</a>
+                <a href="products/">Scarves</a>
               </li>
               <li>
-                <a href="./products">Sunglasses</a>
+                <a href="products/">Sunglasses</a>
               </li>
               <li>
-                <a href="./products">Hats</a>
+                <a href="products/">Hats</a>
               </li>
               <li>
-                <a href="./products">Bags &amp; Wallets</a>
+                <a href="products/">Bags &amp; Wallets</a>
               </li>
               <li>
-                <a href="./products">Shoes</a>
+                <a href="products/">Shoes</a>
               </li>
               <li>
-                <a href="./products">Belts</a>
+                <a href="products/">Belts</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Sale <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Dresses</a>
+                <a href="products/">Dresses</a>
               </li>
               <li>
-                <a href="./products">Tops</a>
+                <a href="products/">Tops</a>
               </li>
               <li>
-                <a href="./products">Bottoms</a>
+                <a href="products/">Bottoms</a>
               </li>
               <li>
-                <a href="./products">Outerwear</a>
+                <a href="products/">Outerwear</a>
               </li>
               <li>
-                <a href="./products">Accessories</a>
+                <a href="products/">Accessories</a>
               </li>
               <li>
-                <a href="./products">Under $10</a>
+                <a href="products/">Under $10</a>
               </li>
             </ul>
           </li>
@@ -260,10 +260,10 @@
         <h1>Tops</h1>
         <div class="row">
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0000.jpg"
+                src="top_0000.jpg"
                 alt="Striped tee"
               />
               <div class="card-block">
@@ -274,10 +274,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item2" style="color:default;text-decoration:none;">
+            <a href="item2/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0001.jpg"
+                src="top_0001.jpg"
                 alt="Bow-collar short-sleeve blouse"
               />
               <div class="card-block">
@@ -287,10 +287,10 @@
             >
           </div>
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item3" style="color:default;text-decoration:none;">
+            <a href="item3/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0008.jpg"
+                src="top_0008.jpg"
                 alt="cashmere sweater"
               />
               <div class="card-block">
@@ -300,10 +300,10 @@
             >
           </div>
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0006.jpg"
+                src="top_0006.jpg"
                 alt="Sequined crop top"
               />
               <div class="card-block">
@@ -313,10 +313,10 @@
             >
           </div>
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0005.jpg"
+                src="top_0005.jpg"
                 alt="Floral crop top"
               />
               <div class="card-block">
@@ -327,10 +327,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0003.jpg"
+                src="top_0003.jpg"
                 alt="Striped ruffle button blouse"
               />
               <div class="card-block">
@@ -343,10 +343,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0002.jpg"
+                src="top_0002.jpg"
                 alt="Basic button-up"
               />
               <div class="card-block">
@@ -357,10 +357,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0007.jpg"
+                src="top_0007.jpg"
                 alt="Chiffon tank"
               />
               <div class="card-block">
@@ -371,10 +371,10 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
-                src="./top_0004.jpg"
+                src="top_0004.jpg"
                 alt="Bow-hem diamond print blouse"
               />
               <div class="card-block">
@@ -395,36 +395,36 @@
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Company</h1>
             <ul>
-              <a href="./contact"><li>About Us</li></a>
-              <a href="./404"><li>Careers</li></a>
-              <a href="./404"><li>Affiliates</li></a>
-              <a href="./404"><li>Press</li></a>
-              <a href="./locations"><li>Store Finder</li></a>
-              <a href="./contact"><li>Contact Us</li></a>
+              <a href="contact"><li>About Us</li></a>
+              <a href="404/"><li>Careers</li></a>
+              <a href="404/"><li>Affiliates</li></a>
+              <a href="404/"><li>Press</li></a>
+              <a href="locations"><li>Store Finder</li></a>
+              <a href="contact"><li>Contact Us</li></a>
             </ul>
           </div>
 
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Account</h1>
             <ul>
-              <a href="./404"><li>My Account</li></a>
-              <a href="./cart"><li>Cart</li></a>
-              <a href="./404"><li>Wishlist</li></a>
-              <a href="./404"><li>Order Status</li></a>
-              <a href="./404"><li>Order History</li></a>
+              <a href="404/"><li>My Account</li></a>
+              <a href="cart/"><li>Cart</li></a>
+              <a href="404/"><li>Wishlist</li></a>
+              <a href="404/"><li>Order Status</li></a>
+              <a href="404/"><li>Order History</li></a>
             </ul>
           </div>
 
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Customer Service</h1>
             <ul>
-              <a href="./404"><li>Shipping Information</li></a>
-              <a href="./404"><li>Payment Options</li></a>
-              <a href="./404"><li>Returns/Exchanges</li></a>
-              <a href="./404"><li>Size Guide</li></a>
-              <a href="./404"><li>Privacy Policy</li></a>
-              <a href="./404"><li>Terms of Use</li></a>
-              <a href="./404"><li>FAQ</li></a>
+              <a href="404/"><li>Shipping Information</li></a>
+              <a href="404/"><li>Payment Options</li></a>
+              <a href="404/"><li>Returns/Exchanges</li></a>
+              <a href="404/"><li>Size Guide</li></a>
+              <a href="404/"><li>Privacy Policy</li></a>
+              <a href="404/"><li>Terms of Use</li></a>
+              <a href="404/"><li>FAQ</li></a>
             </ul>
           </div>
 
@@ -444,28 +444,28 @@
         © 2017 for demonstration purposes only. Berkshire &amp; Nash is not a
         real retailer, and orders will not be fulfilled.
 
-        <script type="text/javascript" src="./public_common.js"></script>
+        <script type="text/javascript" src="public_common.js"></script>
 
-        <script src="./Foresee_Dec2016-main.js"></script>
-        <script src="./ScrollMagic.js"></script>
-        <script src="./debug.js"></script>
-        <script src="./jquery.js"></script>
-        <script src="./velocity.js"></script>
+        <script src="Foresee_Dec2016-main.js"></script>
+        <script src="ScrollMagic.js"></script>
+        <script src="debug.js"></script>
+        <script src="jquery.js"></script>
+        <script src="velocity.js"></script>
       </div>
     </div>
 
     <script
-      src="./jquery-3.js"
+      src="jquery-3.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
     <script
-      src="./popper.js"
+      src="popper.js"
       integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
       crossorigin="anonymous"
     ></script>
     <script
-      src="./bootstrap.js"
+      src="bootstrap.js"
       integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
       crossorigin="anonymous"
     ></script
